# git_hook

./: CMakeLists.txt  readme.md
scripts/git-hooks/: check_format.sh  commit-msg  pre-commit  pre-push  setup_hooks.sh
src/: CMakeLists.txt  calc.hpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
